--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,3 @@ ol {
     list-style: none;
     padding: 0;
 }
-
-.c-layout {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
